Prevent chart overflowing on resize

--- a/src/views/Exchange/Exchange.css
+++ b/src/views/Exchange/Exchange.css
@@ -374,6 +374,7 @@
   left: 0;
   right: 0;
   top: 0.5rem;
+  overflow: hidden;
 }
 
 .Exchange-price-tooltip {
